--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-carousel": "^4.3.0",
     "react-dom": "^18.2.0",
+    "react-flickity-component": "^4.0.7",
     "react-icons": "^5.0.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.1",
     "react-slider": "^2.0.6",
+    "react-styled-carousel": "^0.5.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
